Updated styles. added heading leader image.

--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -7,5 +7,7 @@
     = stylesheets "bootstrap", "bootstrap-responsive", "site"
   %body
     .decoration
+      .header
+        %h1
       .container
         = yield
