--- a/src/index.haml
+++ b/src/index.haml
@@ -20,7 +20,7 @@
           %form#donate-form.form-inline
             %select
               %option $50
-            %input{:type => "submit", :value => "Donate"}
+            %input.btn{:type => "submit", :value => "Donate"}
 
   .row
     .span9
