--- a/src/index.haml
+++ b/src/index.haml
@@ -1,7 +1,8 @@
 .project-page
-  %h1 Brush Park Community Garden 
+  .title.well
+    %h1 Brush Park Community Garden 
 
-  %p Turn this empty space into beautiful vegetables.
+    %p Turn this empty space into beautiful vegetables.
 
   .row
     .span9
