--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -3,6 +3,7 @@
   %head
     %title StaticMatic
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
+    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
     = stylesheets "bootstrap", "bootstrap-responsive", "site"
   %body
