--- a/src/css/site.scss
+++ b/src/css/site.scss
@@ -32,22 +32,19 @@ html,body {
   padding: 1em;
 }
 
-#donate-form {
-  select {
-    width: auto;
-    max-width: 100%;
-  }
-}
-
 .container {
   background-color: white;
 }
 
 h1,h2,h3,h4,h5,h6 {
+  font-family: Abel;
   color: #637994;
 }
 
 .project-page {
+  .video {
+    margin-bottom: 1em;
+  }
 
   .support {
     @include call-out;
@@ -70,6 +67,13 @@ h1,h2,h3,h4,h5,h6 {
     background-color: $green;
     > * {
       padding: 0.5em;
+    }
+  }
+
+  #donate-form {
+    select {
+      width: auto;
+      max-width: 100%;
     }
   }
 }
