--- a/src/index.haml
+++ b/src/index.haml
@@ -4,7 +4,7 @@
   %p Turn this empty space into beautiful vegetables.
 
   .row
-    .span9
+    .video.span9
       %img{:src => "/img/sculpture_garden_photo.jpg"}
 
     .span3
@@ -20,7 +20,7 @@
           %form#donate-form.form-inline
             %select
               %option $50
-            %input.btn{:type => "submit", :value => "Donate"}
+            %input.btn.primary{:type => "submit", :value => "Donate"}
 
   .row
     .span9
