--- a/src/index.haml
+++ b/src/index.haml
@@ -1,5 +1,5 @@
 .project-page
-  .title.well
+  .title
     %h1 Brush Park Community Garden 
 
     %p Turn this empty space into beautiful vegetables.
